--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ form {
 .btnDel {
     display: inline-block;
     padding: 0.35em 1.2em;
-    background-color: green;
+    background-color: tomato;
     border: 0.1em solid #FFFFFF;
     margin: 0 0.3em 0.3em 0;
     border-radius: 0.12em;
